# highway-henry

./: CMakeLists.txt  README.md  plans.md
include/: game.h  music.h  score.h  sprite.h  text.h
src/: game.cpp  main.cpp  music.cpp  score.cpp  sprite.cpp  text.cpp
